# portfolio-data-sport

./: .gitignore  LICENSE  README.md
projects/calculateur_temps_course/: Calculateur_temps_course_sur_route.xlsx  README.md
projects/optimisation_nutrition/: .gitignore  README.md  pyproject.toml  requirements.txt
projects/optimisation_nutrition/app/: app.py
projects/optimisation_nutrition/app/pages/: 1_Mon_profil.py  2_Mes_activites.py  3_Mon_rapport.py
projects/optimisation_nutrition/notebooks/: test.ipynb
projects/optimisation_nutrition/optimisation_nutrition/: __init__.py
projects/optimisation_nutrition/optimisation_nutrition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/optimisation_nutrition/optimisation_nutrition/donnees/: MET.xlsx  NAP.JSON  __init__.py  donnees.py  recommandations.JSON  recommandations.py
projects/optimisation_nutrition/optimisation_nutrition/modeles/: __init__.py  _attributs.py  activite.py  attributs.py  nutrition.py  personne.py  utils.py
projects/optimisation_nutrition/plan_nutrition/: __init__.py  plan_nutrition.py
projects/optimisation_nutrition/plan_nutrition/personne/: __init__.py  _attributs.py  activité.py
projects/optimisation_nutrition/scripts/: main.py
projects/optimisation_nutrition/scripts/plan_nutrition/: __init__.py  plan_nutrition.py
projects/optimisation_nutrition/scripts/plan_nutrition/personne/: __init__.py  _attributs.py  activité.py  personne.py
projects/optimisation_nutrition/tests/: test_activite.py  test_personne.py  test_plan_nutrition.py  test_utils.py
(+8 files in other folders)
