[project]
name = "optimisation-nutrition"
version = "0.1.0"
description = "Projet d'analyse nutritionnelle et de recommandations suivant le profil de la personne et ses activités"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Louis Thébault"}]
dependencies = ["pydantic>=2.12","streamlit>=1.50"]

[build-system]
requires = ["setuptools>=80.9","wheel>=0.45"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["optimisation_nutrition"]
